--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "shapes": "^0.4.0"
   }
 }
